crates/eure-macros/tests/compile_fail/proxy_and_opaque_mutually_exclusive.rs
use eure::FromEure;

#[derive(FromEure)]
#[eure(proxy = "Foo", opaque = "Bar")]
struct Test {
    field: String,
}

fn main() {}
