crates/eure-macros/tests/compile_fail/proxy_and_opaque_mutually_exclusive.stderr
error: cannot use both #[eure(proxy = "...")] and #[eure(opaque = "...")] on the same type; they are mutually exclusive
 --> tests/compile_fail/proxy_and_opaque_mutually_exclusive.rs:4:8
  |
4 | #[eure(proxy = "Foo", opaque = "Bar")]
  |        ^^^^^
